# scraping_pemilu_2024

./: kpu.py  main.py  pemilu.ipynb  pyproject.toml  run.bat  utils.py
datasets/: ACEH.csv
