[tool.poetry]
name = "scraping-pemilu-2024"
version = "0.1.0"
description = "Scraping Pemilu 2024 (src: pemilu2024.kpu.go.id)"
authors = ["belajarqywok <belajarqywok@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
datetime = "^5.4"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
